--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <style>
+      body {
+          text-align:center;
+      } 
+      img {
+          width:60%;
+          height:80%;
+          object-fit: cover;
+      }
+  </style> 
+    <title>#Piksha</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
